@@ -14,7 +14,7 @@
 			<Button name="$parent_ResizeButton" parentKey="resizeButton">
 				<Size x="10" y="10"/>
 				<Anchors>
-					<Anchor point="BOTTOMRIGHT"/>
+					<Anchor point="BOTTOMRIGHT" x="3" y="-3"/>
 				</Anchors>
 				<HitRectInsets left="3" right="0" top="3" bottom="0" />
 				<Layers>
